# 2nd_hackathon_phase1-5

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.backend  Dockerfile.frontend  ISSUE-RESOLUTION.md  LOCAL-TESTING-REPORT.md  PHASE5-COMPLETE.md  PHASE5-SETUP.md  README.md  SOLUTION-FOUND.md  SignOutButton.tsx  TESTING-PLAN.md  api.md  auth-client.ts  cleanup-docs.sh  deploy-docker.sh  deploy.sh  docker-compose.yml  guide.md  instructions.md  local-secrets.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  setup-env-recovery.bat  setup-env-recovery.sh  setup-env.bat  setup-env.sh  setup-phase5-env.bat  test-voice-demo.md  vercel.json
.claude/: settings.json
.claude/commands/: phase-v-commands.sh
.claude/skills/: dapr-integration.skill.md
.specify/memory/: Full-CONSTITUTION.md  Phase-I-in-Memory-Console-Application-CONSTITUTION.md  Phase-III-AI-Powered-Todo-Chatbot-CONSTITUTION.md  (+3 more)
api/: index.py
backend/: auth_utils.py  database.py  main.py  pyproject.toml
backend/agents/: orchestrator.py
backend/agents/skills/: __init__.py  analysis.py  email_responder.py  meeting_minutes.py
backend/mcp_server/: agent.py  chat_endpoint.py  task_tools.py  web_search.py
dapr-components/: pubsub.yaml  secrets.yaml  statestore.yaml
frontend/: .env.local.example  auth_v3.ts  next.config.ts  package-lock.json  package.json
helm-chart/: Chart.yaml  values.yaml
prompts/: phase-4-kubernetes.md
scripts/: README.md  build-docker-images.sh  deploy-phase4.sh  deploy-with-helm.sh  init-db.ts  seed-admin.ts  setup-minikube.sh
specs/: phase-v-spec.md
(+38 files in other folders)
